--- a/src/scss/parts/todo.scss
+++ b/src/scss/parts/todo.scss
@@ -21,6 +21,7 @@
         }
         
         div {
+            display: none;
             position: absolute;
             top: 0;
             left: 0;
